[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/16.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Marlboro.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Marlboro.tres" type="DynamicFont" id=3]
[ext_resource path="res://Saloon/creditsbuttons.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]

size = 19
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 2 )

[node name="Creditspage" type="Node2D"]

[node name="16" type="Sprite" parent="."]
position = Vector2( 163.385, 58.5903 )
rotation = -1.5708
scale = Vector2( 0.101954, 0.222143 )
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 3.0
margin_top = 1.0
margin_right = 220.0
margin_bottom = 98.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 1 )
meta_underlined = false
text = "Credits:
Programming:
	Alexander Windahl 
Models and Sound: 
	Alfred Radu
	"
scroll_active = false

[node name="Saloon" type="Button" parent="."]
margin_left = 195.0
margin_top = 91.0
margin_right = 245.0
margin_bottom = 117.0
custom_fonts/font = ExtResource( 3 )
text = "Back"
script = ExtResource( 4 )

[node name="Page2" type="Button" parent="."]
margin_left = 252.0
margin_top = 91.0
margin_right = 302.0
margin_bottom = 117.0
custom_fonts/font = ExtResource( 3 )
text = "Next"
script = ExtResource( 4 )

[connection signal="pressed" from="Saloon" to="Saloon" method="_on_Saloon_pressed"]
[connection signal="pressed" from="Page2" to="Page2" method="_on_Page2_pressed"]
