[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/16.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Marlboro.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Marlboro.tres" type="DynamicFont" id=3]
[ext_resource path="res://Saloon/creditsbuttons.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]

size = 17
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 2 )

[node name="Creditspage" type="Node2D"]

[node name="16" type="Sprite" parent="."]
position = Vector2( 165.14, 58.976 )
rotation = -1.56955
scale = Vector2( 0.10555, 0.213757 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 223.0
margin_bottom = 88.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 1 )
text = "Additional Content:
  opengameart.org
		Teh_Bucket
		Lucian Pavel "

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 21.0
margin_top = 74.0
margin_right = 182.0
margin_bottom = 148.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 1 )
text = "freemusicarchive.org
		Lobo Loco
	"

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
margin_left = 155.0
margin_top = 20.0
margin_right = 333.0
margin_bottom = 126.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 1 )
text = "	freesound.org
		rock-savage
		cgeffex
		dredile
		ashfox"

[node name="Page1" type="Button" parent="."]
margin_left = 4.0
margin_top = 98.0
margin_right = 59.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 3 )
text = "Back"
script = ExtResource( 4 )

[connection signal="pressed" from="Page1" to="Page1" method="_on_Page1_pressed"]
